# CHANGELOG
##############


Version 0.4.*: 
------------
46: Adjusted the DRAM/distill path output for the tmp folder, which mihgt create problems on some systems.
45: Added more debug messages and graceful waiting time to rule read_annotate__kraken2__assign 
44: Turned the separate bin functions into a script file
43: Rule 'assemble__drep__separate_bins' works now more robust, important for provided assemblies
42: Changed mv command in mag_annotate__proteinortho from explicit to wildcards
41: Reverted update 40, cram stays standard, but introduced a new parameter in params where cram/bam can be chosen
40: Changed the default from cram to bam, as sometimes the header did not work
39: Removed the piping in rule assemble__bowtie2__map and split it rather in two separate steps, within the same rule though
38: Removed $TMPDIR echo from rule read_annotate__phyloflash__run
37: Removed product.html output from mag_annotate__dram_mag_distill as it is not always created
36: Added more echo messages to the logfile of assemble__bowtie2__map
35: Bugfix in assemble__bowtie2__map (missing fai index)
34: Log output added for cramToBam
33: Log output for hmmsearch added for contig annotate output
32: Diamond reports now per default only the top result
31: Harded-coded paths removed from the kegg summary R script
30: Added option to provide arbitrary named self-provided assemblies.
29: tmp folder for samtools sort adjusted to add sample_id and library_id
28: --keep-going removed from default run script
27: Critical bugfix in preprocess__bowtie2__extract_nonhost_run (crashed workflow)
26: Reversed change number 24
25: Option to provide an own, existing assembly added to the Assembler module
24: Added 'phyloflash' to Phyloflash output file, to avoid potential temp file mixups between tools
23: Improved decontamination avoiding misclassified singletons
22: Added HMMER to contig_annotate and set HydDB as starting db (issue #19)