@@ -2,6 +2,7 @@ include: "__functions__.smk"
 include: "camper.smk"
 include: "diamond.smk"
 include: "eggnog.smk"
+include: "eggnog7.smk"
 include: "featurecounts.smk"
 include: "hmmer.smk"
 include: "prodigal.smk"
@@ -20,5 +21,4 @@ rule contig_annotate:
         ],
         rules.contig_annotate__diamond.input,
         rules.contig_annotate__hmmer.input,
-        
-
+        rules.contig_annotate__eggnog7.input,        
