@@ -77,6 +77,7 @@ CONTIG_DIAMOND = CONTIG / "diamond"
 CONTIG_HMMER = CONTIG / "hmmer"
 CONTIG_PRODIGAL = CONTIG / "prodigal"
 CONTIG_EGGNOG = CONTIG / "eggnog"
+CONTIG_EGGNOG7 = CONTIG / "eggnog7"
 CONTIG_SYLPH = CONTIG / "sylph"
 CONTIG_FEATURECOUNTS = CONTIG / "featurecounts"
 
